fixed some layout problems

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,4 @@
-.wrapper {
-    height: 100vh;
-  }
+
   
   body {
     margin: 0;
